# mesh-backend

./: .gitignore  CHANGE_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: smoke-tests.yml  unit-tests.yml
app/: logging_config.py  main.py  run_web.py
app/routes/: optimize.py  roads.py
app/services/: engine.py  osm.py
generator/: app.py  export.py  optimization_manager.py
generator/handlers/: optimization_handlers.py  pipeline_site_handlers.py  project_handlers.py
generator/static/: app.css  app.js
generator/templates/: index.html
tests/: conftest.py  test_engine_service.py  test_health.py  test_mesh_calculator_logging.py  test_mesh_web_runner.py  test_optimization_log_file.py  test_optimization_shutdown.py  test_optimization_stream_logs.py  test_optimize.py  test_osm_service.py  test_roads.py  test_v2_api.py
