[project]
name = "mesh-backend"
version = "0.1.0"
description = "FastAPI backend for mesh network tower placement optimizer"
requires-python = ">=3.10,<4.0"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "mesh-calculator",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "anyio[trio]>=4.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
mesh-calculator = { path = "../mesh_calculator", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
